<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/second">

    <Button
        android:text="@string/Finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/button2" />

    <TextView
        android:text="@string/thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:id="@+id/textView7" />

    <TextView
        android:text="@string/Async"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginBottom="163dp"
        android:id="@+id/textView8" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:layout_below="@+id/textView7"
        android:id="@+id/sc1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/id1" />
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/sc2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/id2" />
    </ScrollView>

</RelativeLayout>